--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
+    "file-loader": "^5.0.2",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
     "react-hot-loader": "^4.12.18",
